--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,10 @@ markdown: redcarpet
 highlighter: pygments
 paginate: 5
 
+sass:
+   sass_dir: _sass
+   style: :compressed
+
 navigation:
  - title: About
    url: /index.html
